move back to Java 21, added tests, fix bugs